--- a/src/output.css
+++ b/src/output.css
@@ -543,3 +543,31 @@ video {
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
+
+.h-screen {
+  height: 100vh;
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.from-\[\#442127\] {
+  --tw-gradient-from: #442127 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(68 33 39 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-\[\#202b3e\] {
+  --tw-gradient-to: #202b3e var(--tw-gradient-to-position);
+}
+
+.font-\[poppins\] {
+  font-family: poppins;
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
