--- a/src/output.css
+++ b/src/output.css
@@ -6,6 +6,50 @@
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
 2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
 */
+.form-container{
+  /* border: 1px solid red; */
+  display: flex;
+  gap: 30px;
+  width: 50%;
+  margin: auto;
+  margin-top: 10vh;
+  padding: 20px;
+  /* transform: translateY(-50vh); */
+}
+
+.inputs,.text-area{
+  width: 100%;
+  
+}
+
+.inputs{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  flex-direction: column;
+}
+
+.inputs input{
+  width: 100%;
+  padding: 25px;
+  
+}       
+input,textarea{
+  background-color: black;
+  /* border: 2px solid rgba(255, 255, 255, 0.542); */
+  /* box-shadow: 0 0 0 16px white; */
+  border: none;
+  box-shadow: 0px 0px 9px rgba(255, 255, 255, 0.577);
+  color: whitesmoke;
+}
+
+input:focus,textarea:focus{
+  border: none;
+  outline: none;
+}
+
+
 
 *,
 ::before,
@@ -607,6 +651,46 @@ video {
   margin-right: auto;
 }
 
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
+.ml-40 {
+  margin-left: 10rem;
+}
+
+.ml-4 {
+  margin-left: 1rem;
+}
+
+.ml-60 {
+  margin-left: 15rem;
+}
+
+.ml-80 {
+  margin-left: 20rem;
+}
+
+.ml-9 {
+  margin-left: 2.25rem;
+}
+
+.ml-96 {
+  margin-left: 24rem;
+}
+
+.mt-20 {
+  margin-top: 5rem;
+}
+
+.ml-20 {
+  margin-left: 5rem;
+}
+
+.mb-20 {
+  margin-bottom: 5rem;
+}
+
 .flex {
   display: flex;
 }
@@ -675,6 +759,14 @@ video {
   width: 40%;
 }
 
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
 .max-w-xs {
   max-width: 20rem;
 }
@@ -731,6 +823,14 @@ video {
   gap: 1rem;
 }
 
+.gap-20 {
+  gap: 5rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .space-x-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(1rem * var(--tw-space-x-reverse));
@@ -745,6 +845,15 @@ video {
 
 .rounded-sm {
   border-radius: 0.125rem;
+}
+
+.border-t-2 {
+  border-top-width: 2px;
+}
+
+.border-\[\#fb153b\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(251 21 59 / var(--tw-border-opacity));
 }
 
 .bg-black {
@@ -781,6 +890,10 @@ video {
   padding: 1.25rem;
 }
 
+.p-36 {
+  padding: 9rem;
+}
+
 .py-16 {
   padding-top: 4rem;
   padding-bottom: 4rem;
@@ -804,6 +917,16 @@ video {
 .py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
+}
+
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .pb-40 {
@@ -834,6 +957,46 @@ video {
   padding-top: 2rem;
 }
 
+.pb-20 {
+  padding-bottom: 5rem;
+}
+
+.pt-0 {
+  padding-top: 0px;
+}
+
+.pb-1 {
+  padding-bottom: 0.25rem;
+}
+
+.pr-40 {
+  padding-right: 10rem;
+}
+
+.pt-6 {
+  padding-top: 1.5rem;
+}
+
+.pt-5 {
+  padding-top: 1.25rem;
+}
+
+.pt-3 {
+  padding-top: 0.75rem;
+}
+
+.pl-20 {
+  padding-left: 5rem;
+}
+
+.pl-6 {
+  padding-left: 1.5rem;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -861,6 +1024,11 @@ video {
   line-height: 1.75rem;
 }
 
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -883,6 +1051,22 @@ video {
 .text-\[\#fb153b\] {
   --tw-text-opacity: 1;
   color: rgb(251 21 59 / var(--tw-text-opacity));
+}
+
+.underline {
+  text-decoration-line: underline;
+}
+
+.decoration-red-600 {
+  text-decoration-color: #dc2626;
+}
+
+.decoration-\[\] {
+  text-decoration-color: ;
+}
+
+.decoration-\[\#fb153b\] {
+  text-decoration-color: #fb153b;
 }
 
 .hover\:bg-\[\#cdb2b6\]:hover {
@@ -958,6 +1142,18 @@ video {
     width: 75%;
   }
 
+  .md\:w-\[95\%\] {
+    width: 95%;
+  }
+
+  .md\:w-\[92\%\] {
+    width: 92%;
+  }
+
+  .md\:w-\[90\%\] {
+    width: 90%;
+  }
+
   .md\:max-w-none {
     max-width: none;
   }
@@ -970,8 +1166,20 @@ video {
     align-items: center;
   }
 
+  .md\:justify-start {
+    justify-content: flex-start;
+  }
+
   .md\:gap-\[4vw\] {
     gap: 4vw;
+  }
+
+  .md\:pb-40 {
+    padding-bottom: 10rem;
+  }
+
+  .md\:pt-20 {
+    padding-top: 5rem;
   }
 
   .md\:text-left {
@@ -986,6 +1194,14 @@ video {
 
   .lg\:w-\[40\%\] {
     width: 40%;
+  }
+
+  .lg\:w-\[4\%\] {
+    width: 4%;
+  }
+
+  .lg\:w-\[41\%\] {
+    width: 41%;
   }
 
   .lg\:flex-row {
@@ -1014,5 +1230,9 @@ video {
 
   .lg\:text-left {
     text-align: left;
+  }
+
+  .lg\:text-center {
+    text-align: center;
   }
 }
