--- a/src/output.css
+++ b/src/output.css
@@ -647,6 +647,22 @@ video {
   margin-bottom: 5rem;
 }
 
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
+.block {
+  display: block;
+}
+
 .flex {
   display: flex;
 }
@@ -677,6 +693,10 @@ video {
 
 .min-h-\[120vh\] {
   min-height: 120vh;
+}
+
+.min-h-screen {
+  min-height: 100vh;
 }
 
 .w-full {
@@ -723,6 +743,10 @@ video {
   width: 5rem;
 }
 
+.w-\[100\] {
+  width: 100;
+}
+
 .max-w-xs {
   max-width: 20rem;
 }
@@ -731,8 +755,22 @@ video {
   max-width: 1280px;
 }
 
+.max-w-md {
+  max-width: 28rem;
+}
+
+.max-w-lg {
+  max-width: 32rem;
+}
+
 .cursor-pointer {
   cursor: pointer;
+}
+
+.appearance-none {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
 
 .flex-row {
@@ -803,6 +841,14 @@ video {
   border-radius: 0.125rem;
 }
 
+.rounded {
+  border-radius: 0.25rem;
+}
+
+.border {
+  border-width: 1px;
+}
+
 .border-t-2 {
   border-top-width: 2px;
 }
@@ -825,6 +871,11 @@ video {
 .bg-\[\#fb153b\] {
   --tw-bg-opacity: 1;
   background-color: rgb(251 21 59 / var(--tw-bg-opacity));
+}
+
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
 
 .from-\[\#442127\] {
@@ -883,6 +934,26 @@ video {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
 }
 
 .pb-40 {
@@ -953,6 +1024,10 @@ video {
   padding-left: 0.5rem;
 }
 
+.pb-8 {
+  padding-bottom: 2rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -985,8 +1060,17 @@ video {
   line-height: 2.5rem;
 }
 
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .font-bold {
   font-weight: 700;
+}
+
+.leading-tight {
+  line-height: 1.25;
 }
 
 .text-white {
@@ -1009,6 +1093,11 @@ video {
   color: rgb(251 21 59 / var(--tw-text-opacity));
 }
 
+.text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
 .underline {
   text-decoration-line: underline;
 }
@@ -1025,9 +1114,26 @@ video {
   text-decoration-color: #fb153b;
 }
 
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .hover\:bg-\[\#cdb2b6\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(205 178 182 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-blue-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
 }
 
 .hover\:text-gray-300:hover {
@@ -1191,46 +1297,4 @@ video {
   .lg\:text-center {
     text-align: center;
   }
-}
-.form-container{
-  /* border: 1px solid red; */
-  display: flex;
-  gap: 30px;
-  width: 50%;
-  margin: auto;
-  margin-top: 10vh;
-  padding: 20px;
-  /* transform: translateY(-50vh); */
-}
-
-.inputs,.text-area{
-  width: 100%;
-  
-}
-
-.inputs{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-  flex-direction: column;
-}
-
-.inputs input{
-  width: 100%;
-  padding: 25px;
-  
-}       
-input,textarea{
-  background-color: black;
-  /* border: 2px solid rgba(255, 255, 255, 0.542); */
-  /* box-shadow: 0 0 0 16px white; */
-  border: none;
-  box-shadow: 0px 0px 9px rgba(255, 255, 255, 0.577);
-  color: whitesmoke;
-}
-
-input:focus,textarea:focus{
-  border: none;
-  outline: none;
 }
